--- a/inventory-web/package.json
+++ b/inventory-web/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.0",
     "express": "^5.1.0",
+    "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -41,6 +42,7 @@
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
     "@types/express": "^5.0.1",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
